# project2-smartlock

./: README.md
faceid-esp32s3-server/: .env.example  package-lock.json  package.json
faceid-esp32s3-server/prisma/: schema.prisma
faceid-esp32s3-server/src/: app.module.ts  main.ts
faceid-esp32s3-server/src/prisma/: prisma.service.ts
faceid_esp32/: CMakeLists.txt  CONFIG_REFACTOR.md  capture.py  partitions.csv  sdkconfig.defaults
faceid_esp32/components/ai_handler/: CMakeLists.txt  ai_handler.cpp
faceid_esp32/components/ai_handler/include/: ai_handler.h
faceid_esp32/components/app_manager/: CMakeLists.txt  app_manager.cpp  app_manager.hpp
faceid_esp32/components/ble_connect/: CMakeLists.txt  ble_connect.c  ble_connect.h
faceid_esp32/components/camera_handler/: CMakeLists.txt  camera_handler.cpp
faceid_esp32/components/common/: CMakeLists.txt  config.c  event.cpp
faceid_esp32/components/http_connect/: CMakeLists.txt  http_connect.c  http_connect.h
faceid_esp32/main/: CMakeLists.txt  idf_component.yml  main.cpp  tmp.cpp
faceid_esp32/server/: requirements.txt  serial.py  server.py
faceid_esp32_app/: .env  README.md  project2.tex  pubspec.yaml
faceid_esp32_app/lib/: app_route.dart  config.dart  main.dart  test_ble.dart
faceid_esp32_app/linux/: CMakeLists.txt
faceid_esp32_app/test/: widget_test.dart
faceid_esp32_app/web/: index.html  manifest.json
faceid_esp32_app/windows/: CMakeLists.txt
latex/: bang-ket-noi-pin.tex  bang-phi-chuc-nang.tex  bang-test-case-1.tex  bang-test-case-2.tex  bang-test-case-3.tex  bang-use-case-1.tex  bang-use-case-2.tex  bang-use-case-3.tex  bia.aux  bia.tex  bieu-do-hoat-dong.tex  chuong1.aux  chuong1.tex  chuong2.aux  chuong2.tex  chuong3-4-1.tex  chuong3.aux  chuong3.tex  chuong4.aux  chuong4.tex  chuong5.aux  chuong5.tex  congthuc.tex  project2.aux  project2.tex  project2.toc
(+887 files in other folders)
